TEST_PROGRAMS/INVALID/01/#16.3.go
package main

// accessing without index is not allowed

func main (x,y int, z float64) {
  main(bar[2][bar[x][bar[x][][][][][]]]);
}
